--- a/bitcamp-java-basic/2020-10-13.md
+++ b/bitcamp-java-basic/2020-10-13.md
@@ -16,7 +16,7 @@ vs Hashtable
     // 발행자가(App 객체가) 게시물, 회원, 프로젝트, 작업 데이터를 사용할 수 있도록
     // 맵 객체에 담아서 공유한다
     
-    // 작업을 수행한 값을 리턴하는 방식이 아닌(void) 파라미터로 받은 것을 공유
+    // 작업을 수행한 값을 리턴하는 방식이 아닌(void) 파라미터로 받은 것을 공유하는 방식
     
    // context를 인아웃 파라미터라고 한다(값을 넣고 꺼내고)
     // 자바에서는 아웃 전용, 인 전용 파라미터가 없다
