--- a/bitcamp-java-basic/2020-10-13.md
+++ b/bitcamp-java-basic/2020-10-13.md
@@ -26,16 +26,8 @@ vs Hashtable
     context.put("projectList", projectList);
     context.put("taskList", taskList);
   }
-```  
-
+```
 - - -
-
-스토리에 집착할 필요가 없었다..
-정말 시간가는줄 모르고 한게
-ui도 그렇고 코딩도 그랬다
-물론 포켓몬이었지만 말이다
-
-게임 망상 망화 
-ui 코딩
-
-뭔가 만드는거..
+pms- 34
+일단 변수를 거의 무조건 쓰자
+out.flush()
