--- a/bitcamp-java-basic/2020-10-27.md
+++ b/bitcamp-java-basic/2020-10-27.md
@@ -7,6 +7,14 @@
 - 회의 : 아이디어 2개로 축약 후 워드 작성(현황, 이점, 주요 기술)
 - 피피티 작성
 
+# 주제 2개 정하기
+
+## 모르겟다 일단 최대한 구글링
+웹메일 텐서플로우, 블록체인 
+- 웹FTP :DB관련은 로그인 뿐이지만 메인서버에서 계정 관리라던가 권한처리, 파일처리, IO등 해볼게 많다고 생각되네요
+
+백엔드, 프론트엔드
+
 - 좀더 특화된 '어떠한' 기술에 관한 포트폴리오를 준비하는게 취업에 더 이득이 될 것이라는 판단하에 이 글을 적게 되었습니다.
 - 로그인단에서의 SSL 인증 혹은 RSA 암호화 방식등의 기술을 하나 섞어주는것 만으로도 포트폴리오 퀄리티가 크게 올라갑니다.
 - 웹페이지 제작을 단순한 JSP로 만드는것이 아닌 angular.js 혹은 구조가 잘 짜여져 있는 HTML5 템플릿을 구해서 연동하는 방식등도 좋습니다.
