--- a/bitcamp-java-basic/2020-10-27.md
+++ b/bitcamp-java-basic/2020-10-27.md
@@ -1,3 +1,5 @@
+# 팀 프로젝트 1일차
+
 10.28.수 회의
 - 준비 : 개발 프로젝트에 대한 다른 개발자들의 후기, 정보성 글 긁어모으기 (어떤 주제, 기술이 도움이 될까?)
 - 회의 : 최종적인 프로젝트 아이디어 조건 확립 (주제, 사용 기술 등등)
@@ -7,44 +9,32 @@
 - 회의 : 아이디어 2개로 축약 후 워드 작성(현황, 이점, 주요 기술)
 - 피피티 작성
 
-# 주제 2개 정하기
+## 10.28 회의
 
-## 모르겟다 일단 최대한 구글링
+- 뭔가 조잡하게 기능이 덕지덕지 있는거보다 몇개 포인트 기능 확실하게(확실한 컨셉)
+  - 사용자입장
+- 이미 있는 거를 카피, 있는 기능을 특화, 또는 추가하고 싶은 기능  
+  - 이미 있는거 주된기능 한두개 정리하고 자신감있게 구현할수있는걸 추려 구상
+- 스토리텔링 
+  1. 내가 부족한 공부, 내가 발전할 수 있는 프로젝트
+  2. 일상생활에서의 문제점, 자주이용하는 사이트에서 기능 특화, 추가, 또는 컨셉 변경
+  (예: 중고나라인데 사고 파는게 아니라빌려주는거)
+
+### 주제 2개 정하기
+
+### 긁어온것
 웹메일 텐서플로우, 블록체인 
 - 웹FTP :DB관련은 로그인 뿐이지만 메인서버에서 계정 관리라던가 권한처리, 파일처리, IO등 해볼게 많다고 생각되네요
 
-백엔드, 프론트엔드
-
-- 좀더 특화된 '어떠한' 기술에 관한 포트폴리오를 준비하는게 취업에 더 이득이 될 것이라는 판단하에 이 글을 적게 되었습니다.
-- 로그인단에서의 SSL 인증 혹은 RSA 암호화 방식등의 기술을 하나 섞어주는것 만으로도 포트폴리오 퀄리티가 크게 올라갑니다.
-- 웹페이지 제작을 단순한 JSP로 만드는것이 아닌 angular.js 혹은 구조가 잘 짜여져 있는 HTML5 템플릿을 구해서 연동하는 방식등도 좋습니다.
-- 처음부터 끝까지 본인이 다 만드는것보다 잘 만들어진 라이브러리 하나를 적용시켜서 그 기능을 구현해보는것도 좋습니다.
-(예를들어 차트 그래프 등등 시각적인 부분도 충분히 나올수 있는..)
-- 전체 소스를 가져오거나 백엔드 단 코드까지 가져오는건 의미가 없지만 프론트단 UI 템플릿 구조나 기능등을 참고하거나 가져오는건 괜찮습니다.
-(물론 구현되어있는 기능과 흐름은 이해해야겠지요.)
 - 흔하지 않은 것들로 구성해서 만드시면 됩니다. 물론 예제가 없거나 난이도가 너무 높으면 의미가 퇴색됩니다. (구현은 했는데 이해를 못한다던지.. 소스를 거의 복붙수준으로 옮겨왔다던지..)
 - 간단한 NOSQL DB를 선택하고 흐름을 구성해본다던지. 인메모리상에서의 이벤트 호출(스파크 등)을 구현해 본다던지. 윈도우에 서버를 올리는게 아니라 리눅스상에서 서버 환경을 구축해 본다던지.
 WAS를 톰캣이 아닌 다른걸로 진행한다던지. 정말 많습니다. 앱이라면 본인이 가고자 하는 회사의 메인아이템에 대한 리버스엔지니어링 (핵심 기능을 간추려서 따라해본거 라던지)
-- 중요한건 다양한 무언가를 조잡하게 엮기보다 내세울만한 포인트를 몇개 만들어주는게 더 좋습니다. 
 - 게시물에서 언급한예의 단점이 뻔한 골격에 프레임만 바꾼 웹사이트 포트폴리오가 주류여서 이를 판단하는 신입채용 인사담당자(보통 프로그래밍 회사는 개발 팀장급)가 매력을 못느끼는 주제로 흐를 가능성이 크기 때문입니다.
 
-
-
-
-- 사용자의 입장에서 생각해보세요. 작성된 프로그램을 과제가 아니라 서비스하는용도라고 생각해보면 고칠게 한두가지가 아닐겁니다. 한걸음 더나가는건 거기서 시작하는거죠
-
-이미 있는 거를 카피, 있는 기능을 특화, 또는 추가하고 싶은 기능
-덕지덕지 기능이 달린 것보다 컨셉과 기능이 확실한 아이템이 더 시선이 많이갑니다.
-
-- 내부기능 이외에도 서버를 AWS(아마존 웹 서비스)등의 클라우드에 등록해서 도메인(무료라도) 등록도 한번쯤 해보시고
-
-- 또한 제작에만 너무큰 공을 들이지 마시고 GIT등을 통한 버전관리 및 설계 단계에서의 UML도 
-허접하지만 정성스럽게 한번쯤 제작해보시는걸 추천드립니다. 
-어차피 인사담당자가 개발자라면 무엇을 만들었나 보다 어떻게 만들었나가 더 관심이 큰 부분입니다.
-
-- 독창적이고, 창의적인 아이디어가 중요하다
-- 자주 쓰는 어플리케이션의 주된 기능 카피 : 다른 유명 사이트나 어플리케이션의 주된 기능 한 두 개를 정리하고  자신감있게 구현할 수 있을 것들을 추려 구상한다.
 
 ex - 채팅 어플리케이션 :  카카오 톡, 라인, 등등 
      - 페이스북 인스타그램의 사진을 편집할 수 있는 웹 어플리케이션
      - 날씨 API 내가 있는 곳을 자동으로 검색하고 즐겨 찾기한 지역의 날씨를 동시에 볼 수 있는 기능
+     
+# JDBC
+
