--- a/bitcamp-java-basic/2020-11-05.md
+++ b/bitcamp-java-basic/2020-11-05.md
@@ -1,3 +1,4 @@
+```java
 package com.eomcs.pms.dao;
 
 import java.util.List;
@@ -12,8 +13,8 @@ public interface MemberDao {
   int update(Member member) throws Exception;
   List<Member> findByProjectNo(int projectNo) throws Exception;
   Member findByEmailPassword(String email, String password) throws Exception;
+  /*
+   * DB에 엑세스 하니까 분명 예외를 던질거다 throws Exception을 달자
+   */
 }
-
-
-
 
