--- a/bitcamp-java-basic/2020.md
+++ b/bitcamp-java-basic/2020.md
@@ -6,6 +6,8 @@
       - 내가 바뀌면 저기도 바뀌고 저기가 바뀌면 내가 바뀜 => 유지보수에 안좋음
       - 필드에 그 객체가 있는거만 쌍방참조가 아니라, 메서드 파라미터에 그 객체가 있다던지도 쌍방참조
         - 예) 
+  2. 기존 코드(클래스)를 손대지 않고 기능을 추가, 변경하고 싶다 => 프록시 디자인 패턴
+    - 프록시가 마치 실제 일하는 애처럼 행동하기 위해 SqlSessionFactory 인터페이스를 따른다
         
 ```java
 public interface CommandFilter {
