--- a/bitcamp-java-basic/2020-11-17.md
+++ b/bitcamp-java-basic/2020-11-17.md
@@ -54,8 +54,49 @@ DAO에서 트랜잭션을 제어하는 코드를 없애야한다(commit/rollback
 
 - - -
 
+구글 이메일 참고
+
+# 리뷰
+추가할것 
+- 권한 테이블 다대다
+
+## yourmeal
+- 포인트에 따라 등급이 변하는것 => db modeling에서 처리할수없다 => 코딩으로 처리 => 포인트 컬럼은 냅두고 등급 컬럼은 삭제
+- 다음주소검색 api
+
+## highfive
+- 
+
+##
+- ebs
+fb@일련번호
+암호 입력x
+
+- fk로 거는 경우는 정말 결함이 발생해서는 안되는 데이터
+팔로우 이력을 알람에 넣고싶은데
+fk로 걸 필요없다
+그 회원이 팔로우했는데 그 회원이 탈퇴하면 그 팔로우 사실도 없어질 필요는 없다
+그냥 알람내용 컬럼에 링크를 걸어라
+
+spring iop
+비동기
 
 
+## 아카이뷰
+
+관리자 9번
+사용자 1번
+
+같은 이메일을 쓴다면 
+
+유니크 인덱스 빈채로 있으면 에러뜸
+
+- 관계테이블
+연결할거 아니면 pk로 할필요없음
+
+insert 예제 만들어라
+
+샘플데이터는 자동증가더라도 무조건 번호 넣는다
 
 
 
