--- a/bitcamp-java-basic/2020-11-19.md
+++ b/bitcamp-java-basic/2020-11-19.md
@@ -18,4 +18,69 @@
 => service 클래스 복붙
 => sessionFactoryProxy, sessionProxy 클래스 복붙
 
-=> 게시글 커맨드객체를 변경한다
+=> 42 꺼 복붙해서 커맨드 객체 바꾼다
+
+- - -
+2020-11-20
+
+커맨드는 댔는데 필터는 아직 안함
+
+chain of responsibility 설계 패턴
+링크드리스트 방식
+노드에다 필터를 달았다
+자기꺼 실행했으면 그 다음 주소 알고 있음
+연쇄적으로 실행
+다 실행햇으면 리턴리턴
+기능 추가 삭제가 편하다
+연쇄적으로 실행할때 그 사이에 필터를 꼽았다 뺐다 그런식으로 기능을 관리하는게 필요하다 기능 추가 삭제가 편한게 필요하다 => chain of responsibility
+
+실행이 연쇄적으로 일어나고 리턴도 연쇄적으로 일어나는
+
+- - -
+
+```java
+// 커맨드나 필터가 사용할 객체를 준비한다.
+      Request request = new Request(out, in, requestLine, context);
+
+      FilterChain filterChain = (FilterChain) context.get("filterChain");
+
+      /*
+       * 명령어처리는 필터체인에게 맡기겟다
+       */
+
+      // context 맵에 보관된 필터 체인을 꺼낸다
+
+      /*
+       * 클라이언트 요청이 들어올때마다 꺼내도 되고 미리 꺼내놔도 된다
+       */
+
+      // 필터들의 체인을 실행한다.
+      // 필터 체인을 따라가면서 중간에 삽입된 필터가 있다면 실행할 것이다
+      // => 마지막 필터에서는 클라이언트가 요청한 명령을 처리할 것이다!
+      if (filterChain != null) {
+        filterChain.doFilter(request);
+      }
+```
+
+- - -
+# Servlet(Server의 작은조각: let은 접미사로 작은 조각을 뜻함)
+
+## 톰캣 서버 설치
+
+alpha버전 받지마라 => core zip 다운 -=> 사용자 홈폴더 밑에 server 폴더에 압축 푼다(server 밑에 톰캣 폴더잇으면됨)
+(
+맥 : 
+server/apache-tomcat-9.0.40/bin 
+chmod 754 *.sh
+(111, 101, 100)
+읽기 쓰기 실행
+나, 나랑 같은그룹?, ?
+
+윈도우 : 창을 닫으면 프로그램 종료됨, 또는 shutdown.bat(리눅스, 맥은 ./shutdown.sh)
+)
+=> http://localhost:8080/
+
+## 톰캣 서버의 위치를 이클립스에 등록한다
+workbench default
+
+이클립스에 등록후 실행 : HTTP 상태 404 – 찾을 수 없음 : 서버는 실행중인데 기본 프로그램이 없다
