--- a/bitcamp-java-basic/2020-11-19.md
+++ b/bitcamp-java-basic/2020-11-19.md
@@ -84,3 +84,46 @@ chmod 754 *.sh
 workbench default
 
 이클립스에 등록후 실행 : HTTP 상태 404 – 찾을 수 없음 : 서버는 실행중인데 기본 프로그램이 없다
+
+create database 'studydb'
+character set utf8
+collate utf8_general_ci;
+
+# eomcs-web-project
+
+
+jar의 범위를 지정할 수 있다
+  // 컴파일할때만
+  compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+
+  // 컴파일, 배포
+  implementation 'com.google.guava:guava:28.1-jre'
+
+  // 컴파일, 단위테스트
+  testImplementation 'junit:junit:4.12'
+
+  gradle build만 했는데 war 생김
+
+
+
+만약 publish 햇는데 배포가 안됐다
+remove 하고 publish 하고 직접 들어가보면
+
+
+
+jdk가 깨질경우가 아주 가끔잇음
+백신프로그램때문에일듯
+
+- - -
+
+
+
+
+# 
+src/webapp/index.html 추가
+
+ id application 삭제
+
+ application{} 삭제
+
+
