--- a/bitcamp-java-basic/2020-11-04 도메인.md
+++ b/bitcamp-java-basic/2020-11-04 도메인.md
@@ -1,4 +1,75 @@
 ```java
+package com.eomcs.pms.handler;
+
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+
+public class ProjectListCommand implements Command {
+
+  @Override
+  public void execute() {
+    System.out.println("[프로젝트 목록]");
+
+    try (Connection con = DriverManager.getConnection(
+        "jdbc:mysql://localhost:3306/studydb?user=study&password=1111");
+        PreparedStatement stmt = con.prepareStatement(
+            "select p.no, p.title, p.sdt, p.edt, m.name owner_name"
+                + " from pms_project p inner join pms_member m on p.owner=m.no"
+                /*
+                 * outer left : owner가 없을 수도 있으면
+                 * (지금 우리는 owner가 무조건 있다)
+                 */
+                 + " order by p.no desc")) {
+
+      try (ResultSet rs = stmt.executeQuery()) {
+
+
+        System.out.println("번호, 프로젝트명, 시작일 ~ 종료일, 관리자, 팀원");
+        while (rs.next()) {
+          StringBuilder members = new StringBuilder();
+          try(PreparedStatement stmt2 = con.prepareStatement(
+              "select mp.member_no, m.name"
+                  + " from pms_member_project mp"
+                  + " inner join pms_member m on mp.member_no=m.no"
+                  + " where mp.project_no=" + rs.getInt("no"));
+              ResultSet memberRs = stmt2.executeQuery()){
+
+            while (memberRs.next()) {
+              if (members.length() > 0) {
+                members.append(".");
+              }
+              members.append(memberRs.getString("name"));
+              /*
+               * 컬럼명 조심
+               */
+            }
+          }
+          System.out.printf("%d, %s, %s ~ %s, %s, [%s]\n",
+              rs.getInt("no"),
+              rs.getString("title"),
+              rs.getString("sdt"),
+              rs.getString("edt"),
+              rs.getString("owner_name"),
+              members.toString()
+              /*
+               * 별명을 줘야됨(owner_name)
+               */
+              );
+        }
+      }
+    } catch (Exception e) {
+      System.out.println("프로젝트 목록 조회 중 오류 발생!");
+      e.printStackTrace();
+    }
+  }
+}
+```
+
+
+
+```java
 public class Task {
   private int no;
   private String content;
@@ -15,12 +86,31 @@ public class Task {
 # 37-d 무결성
 
 ```sql
+create table pms_board(
+  no int not null,
+  title varchar(255) not null,
+  content text not null,
+  writer int not null,
+  cdt datetime default now(),
+  vw_cnt int default 0
+);
+
+alter table pms_board
+  add constraint pms_board_pk primary key(no);
+
+alter table pms_board
+  modify column no int not null auto_increment;
+
+alter table pms_board
+  add constraint pms_board_fk foreign key(writer) references pms_member(no);
+
+
 create table pms_task(
   no int not null,
   content text not null,
   deadline date not null,
-  owner int not null,   /* pms_member 의 PK 컬럼을 가리키는 외부키다*/
-  project_no int not null, /* pms_project 의 PK 컬럼을 가리키는 외부키다*/
+  owner int not null,
+  project_no int not null,
   status int default 0
 );
 
@@ -119,28 +209,6 @@ public class Task {
   */
 ```
 
-
-```sql
-create table pms_board(
-  no int not null,
-  title varchar(255) not null,
-  content text not null,
-  writer int not null,
-  cdt datetime default now(),
-  vw_cnt int default 0
-);
-
-alter table pms_board
-  add constraint pms_board_pk primary key(no);
-
-alter table pms_board
-  modify column no int not null auto_increment;
-
-alter table pms_board
-  add constraint pms_board_fk foreign key(writer) references pms_member(no);
-
-```
-
 ```java
 public class Board {
   private int no;
@@ -210,90 +278,23 @@ public class BoardDao {
 
 ```
 
-암호는 무조건 단방향이어야한다
-= 복호화가 불가능해야한다
-= 관리자도 모르는 암호여야한다
-
-MariaDB [studydb]> select password('1111');
-+-------------------------------------------+
-| password('1111')                          |
-+-------------------------------------------+
-| *89C6B530AA78695E257E55D63C00A6EC9AD3E977 |
-+-------------------------------------------+
-1 row in set (0.000 sec)
-
-MariaDB [studydb]> select password('1112');
-+-------------------------------------------+
-| password('1112')                          |
-+-------------------------------------------+
-| *AB6883620813DC2516BE1C5F5847D51078787A0A |
-+-------------------------------------------+
-1 row in set (0.000 sec)
-
-MariaDB [studydb]> select password('a');
-+-------------------------------------------+
-| password('a')                             |
-+-------------------------------------------+
-| *667F407DE7C6AD07358FA38DAED7828A72014B4E |
-+-------------------------------------------+
-1 row in set (0.000 sec)
-
-MariaDB [studydb]> select password('adsafadsfdsafadsfa');
-+-------------------------------------------+
-| password('adsafadsfdsafadsfa')            |
-+-------------------------------------------+
-| *9E3629008C7DF13A8DE947B46CC3969700080A33 |
-+-------------------------------------------+
-1 row in set (0.000 sec)
-
-MariaDB [studydb]> 
-
 ```java
-"insert into pms_member(name,email,password,photo,tel)"
-                + " values(?,?,password(?),?,?)"
-                /*
-                password함수 : 리턴값을 서버에 저장
-                */
-```
+package com.eomcs.pms.dao;
 
-```java
-update pms_member set password=password('1111');
-/*
-모든 password를 변경
-*/
-```
+import java.util.List;
+import com.eomcs.pms.domain.Member;
 
-``` java
-MariaDB [studydb]> select count(*) from pms_member where email="qq" and password = password('1111');
-+----------+
-| count(*) |
-+----------+
-|        1 |
-+----------+
-1 row in set (0.003 sec)
+public interface MemberDao {
+  int insert(Member member) throws Exception;
+  int delete(int no) throws Exception;
+  Member findByNo(int no) throws Exception;
+  Member findByName(String name) throws Exception;
+  List<Member> findAll() throws Exception;
+  int update(Member member) throws Exception;
+  List<Member> findByProjectNo(int projectNo) throws Exception;
+  Member findByEmailPassword(String email, String password) throws Exception;
+  /*
+   * DB에 엑세스 하니까 분명 예외를 던질거다 throws Exception을 달자
+   */
+}
 
-/*
-- 성공
-- count(*) : 개수를 리턴?
-*/
-
-MariaDB [studydb]> select count(*) from pms_member where email="qq" and password = password('1112');
-+----------+
-| count(*) |
-+----------+
-|        0 |
-+----------+
-1 row in set (0.001 sec)
-
-/*
-실패
-*/
-```
-
-## 비대칭암호(그림)
-공개키(자물통)(public key)로 암호화시키고
-개인키(개인열쇠)(private key)로 푼다
-
-```java
-
-```
