--- a/bitcamp-java-basic/2020-pms.md
+++ b/bitcamp-java-basic/2020-pms.md
@@ -1,3 +1,34 @@
+## 도메인
+1. fk(int)는 부모 테이블의 도메인으로
+2. 다대다는 한쪽 도메인에 List<다른테이블도메인>로
+
+
+- Member
+- Board
+  private Member writer;    1.fk Member
+
+  writer varchar(30) not null,    fk int
+
+- Project
+  private Member owner;   1.fk Member
+  private List<Member> members;   2.다대다
+ 
+  owner int not null    fk int
+
+<!-- 도메인의 필드와 테이블의 컬럼이 일치할 필요는 없다. 도메인은 그릇일 뿐이다.-->
+- Task int projectNo 있는데 project title도 필드에 추가
+
+  private Member owner;   fk Member
+  private int projectNo;
+  private String projectTitle;
+
+  owner int not null,   묶어서 fk int
+  project_no int not null,
+
+
+
+- - - - - - - - - -
+
 ## 쌍방참조
 1 필드에 있거나(List<>, 배열 등)
 2 메서드 파라미터에있거나
@@ -42,12 +73,6 @@ public interface CommandFilter {
 아 그래서 위에서..
 
 # Hashmap vs Hashtable
-HashMap 은 
-1. key,value에 null을 허용
-2. 멀티스레딩 환경에서 스레드 safe 하지 않다 
-그래서 멀티스레딩 환경에서는 Hashtable을 쓰는게 좋다
-vs Hashtable
-
 
 
 - - -
