--- a/bitcamp-java-basic/2020-11-26 서블릿.md
+++ b/bitcamp-java-basic/2020-11-26 서블릿.md
@@ -91,7 +91,7 @@ http://localhost:9999/eomcs-java-web/ex04/test01.html => 실제 위치
 / => (동적파일) : 서버 루트 (예: /bitcamp-java-project/ex04/s1)
 
 
-## url인코딩
+## url인코딩 - 면접 질문
 
 url에는 특수문자나 공백이 들어갈 수 없다
 특수문자나 공백이 들어가면 url 인코딩한다(공백은 +로 바뀜)
@@ -100,4 +100,113 @@ url에는 특수문자나 공백이 들어갈 수 없다
 서버에서 헷갈릴만한 문자는 웹브라우저가 인코딩하는거다
 서버에서는 [req.getParmeter] 할때 url 디코딩 해줌
 
+
+
+## 
+```java
+package com.eomcs.pms.web;
+
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import javax.servlet.ServletContext;
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
+import com.eomcs.pms.domain.Member;
+import com.eomcs.pms.service.MemberService;
+
+@WebServlet("/auth/login")
+public class LoginServlet extends HttpServlet {
+
+  private static final long serialVersionUID = 1L;
+
+
+  /*
+   * web app 한개당 context는 한개다 클라이언트마다 있는게 아님
+   * 예) web apps 안에 app 6개 
+   */
+  @Override
+  protected void doPost(HttpServletRequest request, HttpServletResponse response)
+      throws ServletException, IOException {
+
+
+    HttpSession session = request.getSession();
+
+
+    request.setCharacterEncoding("UTF-8"); 
+    /*
+     * get요청은 안해도됨 post만 하면됨 (한글이 있다면). 특수문자는?
+     */
+
+    response.setContentType("text/html;charset=UTF-8");
+    PrintWriter out = response.getWriter();
+
+    // 클라이언트 전용 보관소를 준비한다
+
+    out.println("<!DOCTYPE html>");
+    out.println("<html>");
+    out.println("<head><title>게시글조회</title></head>");
+    out.println("<body>");
+
+    try {
+      out.println("<h1>로그인</h1>");
+
+      if (session.getAttribute("loginUser") != null) {
+        out.println("<p>로그인 되어 있습니다!</p>");
+      } else {
+
+        String email = request.getParameter("email");
+        String password = request.getParameter("password");
+
+        ServletContext ctx = request.getServletContext();
+        MemberService memberService = (MemberService) ctx.getAttribute("memberService");
+
+        Member member = memberService.get(email, password);
+        if (member == null) {
+          out.println("사용자 정보가 맞지 않습니다.");
+        } else {
+          // 로그인이 성공했으면 회원 정보를
+          // 각 클라이언트의 전용 보관소인 session에 저장한다.
+          session.setAttribute("loginUser", member);
+          out.printf("<p>%s 님 반갑습니다.</p>", member.getName());
+        }
+      }
+    } catch (Exception e) {
+      out.println("<h2>작업 처리 중 오류 발생! - %s</h2>\n");
+      out.printf("<pre>%s</pre>\n", e.getMessage());
+
+      StringWriter errOut = new StringWriter();
+      e.printStackTrace(new PrintWriter(errOut));
+      out.println("<h3>작업 처리 중 오류 발생! - %s</h3>\n");
+      out.printf("<pre>%s</pre>\n", errOut.toString());
+    }
+
+    out.println("</body>");
+    out.println("</html>");
+  }
+}
+```
+
+```java
+out.println("<form action='update' method='post'>");
+      out.printf("번호: <input type='text' name='no' value='%d' readonly><br>\n", board.getNo());
+      out.printf("제목: <input type='text' name='title' value='%s'><br>\n", board.getTitle());
+      out.printf("내용: <textarea name='content'>%s</textarea><br>\n", board.getContent());
+      out.printf("작성자: %s<br>\n", board.getWriter().getName());
+      out.printf("등록일: %s<br>\n", board.getRegisteredDate());
+      out.printf("조회수: %d<br>\n", board.getViewCount());
+      out.println("<p>");
+      out.println("<button>변경</button>");
+      out.printf("<a href='delete?no=%d'>삭제</a>", board.getNo());
+      /*
+       * 삭제를 post방식으로 하려면 form을 새로 또 만들어야됨
+       * 그래서 그냥 링크로 했음(get)
+       */
+      out.println("</p>");
+      out.println("</form>");
+```
 
