--- a/bitcamp-java-basic/2020-11-26 서블릿.md
+++ b/bitcamp-java-basic/2020-11-26 서블릿.md
@@ -210,3 +210,45 @@ out.println("<form action='update' method='post'>");
       out.println("</form>");
 ```
 
+- - - 
+
+## Serlvet03
+
+겟요청은 파일을 서버에 보낼수없다
+일반적인 포스트 요청도 보낼수없다
+-> 둘다 파일명만 보냄
+-> contenttype:멀티파트로 보내라
+
+content type : multipart
+boundary : 구분자(브라우저마다 다 다르다 너무 뻔한걸 하면 업로드한 데이터가 저런값을 갖고잇을수도잇으니까)
+
+-> 멀티파트로 보내면 서블릿에서는 getParameter로 꺼낼수없다 : getParameter로 받으면 다 null임 
+이름=null
+나이=null
+사진=null
+-> 이걸 처리하려면 따로 프로그램을 짜야됨
+-> 그래서 1 서블릿3.0에서 기본적으로 있는 클래스를 쓰거나
+2 apache에서 라이브러리 배포하는걸 쓰거나 : part들을 짜르고 값들을 추출하는 도우미 클래스 제공
+3 spring webmvc에서 제공하는걸 씀
+
+웹브라우저에서 바라보는 경로는 무조건 서버루트
+웹브라우저에서 쓰는 경로면 무조건 서버루트
+서블릿 컨테이너가 사용하는 경로는 컨텍스트 루트
+서블릿 컨테이너에게 알려주는 경로다 -> 컨텍스트 루트
+html안에 삽입된 루트 = 웹브라우저가 사용하는 루트 = 웹브라우저에게 던져주는 루트
+
+- - -
+
+## Filter
+
+- - -
+
+## pms
+
+ out.printf("<a href='../task/addForm?projectNo=%d'>새 작업</a><br>\n",
+            /*
+             * 넘버만 보내라 타이틀이나 다른거도 보내면 검수 통과 못한다
+             * 서블릿->서블릿일때는  
+             * 받는 서블릿이 번호(pk)만 받아서 db에서 최신정보만 가져와라
+             */
+            project.getNo()); 
