--- a/bitcamp-java-basic/2020-11-19 pms43.md
+++ b/bitcamp-java-basic/2020-11-19 pms43.md
@@ -82,6 +82,7 @@ chmod 754 *.sh
 
 ## 톰캣 서버의 위치를 이클립스에 등록한다
 workbench default
+  - Eclipse/preferences/Server/Runtime Environments: 톰캣 서버 등록
 
 이클립스에 등록후 실행 : HTTP 상태 404 – 찾을 수 없음 : 서버는 실행중인데 기본 프로그램이 없다
 
