--- a/bitcamp-java-basic/2020.md
+++ b/bitcamp-java-basic/2020.md
@@ -341,6 +341,22 @@ TaskService!!! 를 사용해서
 그냥 프론트컨트롤러가 call하고 리턴받는거지
 viewResolver?
 
+# 보관소 그림!
+DS에 요청이 들어오는 순간 ServletRequest, ServletResponse 생성
+요청이 끝날때까지 모든 서블릿들이 쟤네를 공유(인클루드 포워드 당한애도)
+include = service call!!
+include는 새로 요청을 발생시키는게 아니다
+요청은 무조건 클라이언트가 보낸거만(http)
+그럼 어떻게 해결하나-> 다 서블릿이라서 방법이없다
+인클루드 포워드는 리퀘스트와 리스폰스를 공유한다
+아까 널이 뜬이유는 forward한담에 인클루드가 불가능하기때문이다
+그래서 프론트컨트롤러도 서블릿이고 인클루드 받는애도 서블릿이면 프론트컨트롤러를 경유하게 하지마라!(그림)
+경유하면 인클루드한 애!의 url을 모르니까!
+근데 더좋은방법은 jsp를 include하는게 깔끔(그림 : 프론트 컨트롤러 기반 요청 처리 기본구조)
+서블릿을 굳이 여러개 인클루드 할 필요가 없다!
+서비스가 업무로직을 처리하기 때문이다
+서블릿은(페이지컨트롤러) 특정 페이지 요청처리를 통제!할뿐
+
 
 - 서블릿 인터페이스의 5개 메서드(d0Get, doPost)
 
